// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview should lifecycle 1`] = `
.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c22 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c25 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c24 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c19 {
  display: inline-block;
}

.c19 input {
  display: none;
}

.c19 .c23 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  stroke: #B3C6F1;
}

.c19 .c23 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c19:hover > .c21 {
  cursor: pointer;
}

.c19:hover .c23 svg > :first-child {
  fill: #ECF1FC;
}

.c20 label {
  gap: 0.75rem;
  grid-template-columns: 1.5rem 1fr;
  grid-template-rows: 3.5rem;
}

.c20 label div:first-child {
  width: 1.5rem;
  height: 3.5rem;
}

.c20 label div:last-child {
  margin-top: 0;
  height: 3.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 16.875rem;
  box-shadow: 0 0.125rem 0.25rem rgba(71,71,71,0.25);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 37.5rem;
  max-height: 37.5rem;
  margin: 0 2.5rem 1.5rem;
  background-color: #fbfbfb;
}

.c1 {
  min-width: 22.5rem;
  height: 50rem;
  -webkit-transform: scale(0.75) translateY(-17%) translateX(-17%);
  -ms-transform: scale(0.75) translateY(-17%) translateX(-17%);
  transform: scale(0.75) translateY(-17%) translateX(-17%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  height: 2rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1.75rem;
  padding-left: 1.4375rem;
  background-color: #fbfbfb;
}

.c3 svg {
  margin-right: 0.5rem;
}

.c5 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 400;
  font-style: normal;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 17.25rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  gap: 2rem;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  width: 100%;
}

.c16 {
  margin: 0.25rem 0 1rem;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #808080;
  width: 100%;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c13 textarea {
  height: 7.125rem;
}

.c27 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 4.6875rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c27:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c28 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 2.5625rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c28:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c7 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  width: 100%;
  border-radius: 0.75rem;
  background-color: #ECF1FC;
  height: 0.75rem;
  position: relative;
}

.c9 {
  width: calc(100% * 0.25);
  position: relative;
  height: 0.75rem;
  border-radius: 0.75rem;
  background-color: #4475E3;
  -webkit-transition: width 300ms cubic-bezier(0.45,0.05,0,1);
  transition: width 300ms cubic-bezier(0.45,0.05,0,1);
}

.c10 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #474747;
  margin-top: 0.5rem;
  margin-bottom: 0.375rem;
}

.c11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  height: 3.5rem;
}

.c6 {
  margin: 0.75rem 1.5rem 0;
}

<div
  class="c0"
  data-testid="preview"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
    <div
      class="c3"
    >
      <svg />
      <div
        class="c4"
      >
        0 Survey placeholder for title maximum two lines
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <div
              class="c9"
            />
          </div>
          <div
            class="c10"
          >
            1 out of 4
          </div>
        </div>
      </div>
      <div
        class="c11"
      >
        <div
          class="c12"
          data-testid="survey-preview-questions"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div
                class="c15"
              >
                Did you experience nausea today?*
              </div>
              <div
                class="c16"
              />
            </div>
            <div
              class="c17"
            >
              <div
                class="c18"
              >
                <div
                  class="c19  c20"
                  kind="mobile"
                >
                  <label
                    class="c21 c22"
                    for="41"
                    kind="mobile"
                  >
                    <div
                      class="c23 c24"
                    >
                      <svg />
                    </div>
                    <div
                      class="c25"
                    >
                      Yes
                    </div>
                  </label>
                  <input
                    id="41"
                    type="checkbox"
                    value="0"
                  />
                </div>
              </div>
              <div
                class="c18"
              >
                <div
                  class="c19  c20"
                  kind="mobile"
                >
                  <label
                    class="c21 c22"
                    for="42"
                    kind="mobile"
                  >
                    <div
                      class="c23 c24"
                    >
                      <svg />
                    </div>
                    <div
                      class="c25"
                    >
                      No
                    </div>
                  </label>
                  <input
                    id="42"
                    type="checkbox"
                    value="1"
                  />
                </div>
              </div>
              <div
                class="c18"
              >
                <div
                  class="c19  c20"
                  kind="mobile"
                >
                  <label
                    class="c21 c22"
                    for="43"
                    kind="mobile"
                  >
                    <div
                      class="c23 c24"
                    >
                      <svg />
                    </div>
                    <div
                      class="c25"
                    >
                      I dont remember
                    </div>
                  </label>
                  <input
                    id="43"
                    type="checkbox"
                    value="2"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c26"
      >
        <button
          class="c27"
          data-testid="survey-preview-prev"
          disabled=""
          width="75"
        >
          Previous
        </button>
        <button
          class="c28"
          data-testid="survey-preview-next"
          disabled=""
          width="41"
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Preview should lifecycle 2`] = `
.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c22 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c25 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c24 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c19 {
  display: inline-block;
}

.c19 input {
  display: none;
}

.c19 .c23 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  stroke: #B3C6F1;
}

.c19 .c23 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c19:hover > .c21 {
  cursor: pointer;
}

.c19:hover .c23 svg > :first-child {
  fill: #ECF1FC;
}

.c20 label {
  gap: 0.75rem;
  grid-template-columns: 1.5rem 1fr;
  grid-template-rows: 3.5rem;
}

.c20 label div:first-child {
  width: 1.5rem;
  height: 3.5rem;
}

.c20 label div:last-child {
  margin-top: 0;
  height: 3.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 16.875rem;
  box-shadow: 0 0.125rem 0.25rem rgba(71,71,71,0.25);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 37.5rem;
  max-height: 37.5rem;
  margin: 0 2.5rem 1.5rem;
  background-color: #fbfbfb;
}

.c1 {
  min-width: 22.5rem;
  height: 50rem;
  -webkit-transform: scale(0.75) translateY(-17%) translateX(-17%);
  -ms-transform: scale(0.75) translateY(-17%) translateX(-17%);
  transform: scale(0.75) translateY(-17%) translateX(-17%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  height: 2rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1.75rem;
  padding-left: 1.4375rem;
  background-color: #fbfbfb;
}

.c3 svg {
  margin-right: 0.5rem;
}

.c5 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 400;
  font-style: normal;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 17.25rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  gap: 2rem;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  width: 100%;
}

.c16 {
  margin: 0.25rem 0 1rem;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #808080;
  width: 100%;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c13 textarea {
  height: 7.125rem;
}

.c27 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 4.6875rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c27:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c28 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 2.5625rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c28:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c7 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  width: 100%;
  border-radius: 0.75rem;
  background-color: #ECF1FC;
  height: 0.75rem;
  position: relative;
}

.c9 {
  width: calc(100% * 0.25);
  position: relative;
  height: 0.75rem;
  border-radius: 0.75rem;
  background-color: #4475E3;
  -webkit-transition: width 300ms cubic-bezier(0.45,0.05,0,1);
  transition: width 300ms cubic-bezier(0.45,0.05,0,1);
}

.c10 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #474747;
  margin-top: 0.5rem;
  margin-bottom: 0.375rem;
}

.c11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  height: 3.5rem;
}

.c6 {
  margin: 0.75rem 1.5rem 0;
}

<div
  class="c0"
  data-testid="preview"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
    <div
      class="c3"
    >
      <svg />
      <div
        class="c4"
      >
        0 Survey placeholder for title maximum two lines
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <div
              class="c9"
            />
          </div>
          <div
            class="c10"
          >
            1 out of 4
          </div>
        </div>
      </div>
      <div
        class="c11"
      >
        <div
          class="c12"
          data-testid="survey-preview-questions"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div
                class="c15"
              >
                Did you experience nausea today?*
              </div>
              <div
                class="c16"
              />
            </div>
            <div
              class="c17"
            >
              <div
                class="c18"
              >
                <div
                  class="c19  c20"
                  kind="mobile"
                >
                  <label
                    class="c21 c22"
                    for="41"
                    kind="mobile"
                  >
                    <div
                      class="c23 c24"
                    >
                      <svg />
                    </div>
                    <div
                      class="c25"
                    >
                      Yes
                    </div>
                  </label>
                  <input
                    id="41"
                    type="checkbox"
                    value="0"
                  />
                </div>
              </div>
              <div
                class="c18"
              >
                <div
                  class="c19  c20"
                  kind="mobile"
                >
                  <label
                    class="c21 c22"
                    for="42"
                    kind="mobile"
                  >
                    <div
                      class="c23 c24"
                    >
                      <svg />
                    </div>
                    <div
                      class="c25"
                    >
                      No
                    </div>
                  </label>
                  <input
                    id="42"
                    type="checkbox"
                    value="1"
                  />
                </div>
              </div>
              <div
                class="c18"
              >
                <div
                  class="c19  c20"
                  kind="mobile"
                >
                  <label
                    class="c21 c22"
                    for="43"
                    kind="mobile"
                  >
                    <div
                      class="c23 c24"
                    >
                      <svg />
                    </div>
                    <div
                      class="c25"
                    >
                      I dont remember
                    </div>
                  </label>
                  <input
                    id="43"
                    type="checkbox"
                    value="2"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c26"
      >
        <button
          class="c27"
          data-testid="survey-preview-prev"
          disabled=""
          width="75"
        >
          Previous
        </button>
        <button
          class="c28"
          data-testid="survey-preview-next"
          disabled=""
          width="41"
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Preview should lifecycle 3`] = `
.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c22 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c24 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c25 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  margin-top: 0.59375rem;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
}

.c19 {
  display: inline-block;
}

.c19 input {
  display: none;
}

.c19 .c23 > svg > :nth-child(1) {
  -webkit-transition: stroke 300ms cubic-bezier(0.45,0.05,0,1),fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke 300ms cubic-bezier(0.45,0.05,0,1),fill 300ms cubic-bezier(0.45,0.05,0,1);
  stroke: #B3C6F1;
  fill: #FFFFFF;
}

.c19:hover > .c21 {
  cursor: pointer;
}

.c19:hover .c23 > svg > :nth-child(1) {
  fill: #ECF1FC;
  stroke: #B3C6F1;
}

.c20 label {
  gap: 0.75rem;
  grid-template-columns: 1.5rem 1fr;
  grid-template-rows: 3.5rem;
}

.c20 label div:first-child {
  width: 1.5rem;
  height: 3.5rem;
}

.c20 label div:last-child {
  margin-top: 0;
  height: 3.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 16.875rem;
  box-shadow: 0 0.125rem 0.25rem rgba(71,71,71,0.25);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 37.5rem;
  max-height: 37.5rem;
  margin: 0 2.5rem 1.5rem;
  background-color: #fbfbfb;
}

.c1 {
  min-width: 22.5rem;
  height: 50rem;
  -webkit-transform: scale(0.75) translateY(-17%) translateX(-17%);
  -ms-transform: scale(0.75) translateY(-17%) translateX(-17%);
  transform: scale(0.75) translateY(-17%) translateX(-17%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  height: 2rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1.75rem;
  padding-left: 1.4375rem;
  background-color: #fbfbfb;
}

.c3 svg {
  margin-right: 0.5rem;
}

.c5 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 400;
  font-style: normal;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 17.25rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  gap: 2rem;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  width: 100%;
}

.c16 {
  margin: 0.25rem 0 1rem;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #808080;
  width: 100%;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c13 textarea {
  height: 7.125rem;
}

.c27 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 4.6875rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c27:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c28 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 2.5625rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c28:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c7 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  width: 100%;
  border-radius: 0.75rem;
  background-color: #ECF1FC;
  height: 0.75rem;
  position: relative;
}

.c9 {
  width: calc(100% * 0.5);
  position: relative;
  height: 0.75rem;
  border-radius: 0.75rem;
  background-color: #4475E3;
  -webkit-transition: width 300ms cubic-bezier(0.45,0.05,0,1);
  transition: width 300ms cubic-bezier(0.45,0.05,0,1);
}

.c10 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #474747;
  margin-top: 0.5rem;
  margin-bottom: 0.375rem;
}

.c11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  height: 3.5rem;
}

.c6 {
  margin: 0.75rem 1.5rem 0;
}

<div
  class="c0"
  data-testid="preview"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
    <div
      class="c3"
    >
      <svg />
      <div
        class="c4"
      >
        0 Survey placeholder for title maximum two lines
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <div
              class="c9"
            />
          </div>
          <div
            class="c10"
          >
            2 out of 4
          </div>
        </div>
      </div>
      <div
        class="c11"
      >
        <div
          class="c12"
          data-testid="survey-preview-questions"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div
                class="c15"
              >
                Please select the symptoms you experienced today.*
              </div>
              <div
                class="c16"
              >
                Recall the feelings you had today.
              </div>
            </div>
            <div
              class="c17"
            >
              <div
                class="c18"
              >
                <div
                  class="c19 c20"
                >
                  <label
                    class="c21 c22"
                    for="checkbox_45"
                  >
                    <div
                      class="c23 c24"
                    >
                      <svg />
                    </div>
                    <div
                      class="c25"
                      data-testid="checkbox-label"
                    >
                      Dizzy
                    </div>
                  </label>
                  <input
                    id="checkbox_45"
                    type="checkbox"
                    value="0"
                  />
                </div>
              </div>
              <div
                class="c18"
              >
                <div
                  class="c19 c20"
                >
                  <label
                    class="c21 c22"
                    for="checkbox_46"
                  >
                    <div
                      class="c23 c24"
                    >
                      <svg />
                    </div>
                    <div
                      class="c25"
                      data-testid="checkbox-label"
                    >
                      Sore throat
                    </div>
                  </label>
                  <input
                    id="checkbox_46"
                    type="checkbox"
                    value="1"
                  />
                </div>
              </div>
              <div
                class="c18"
              >
                <div
                  class="c19 c20"
                >
                  <label
                    class="c21 c22"
                    for="checkbox_47"
                  >
                    <div
                      class="c23 c24"
                    >
                      <svg />
                    </div>
                    <div
                      class="c25"
                      data-testid="checkbox-label"
                    >
                      Nausea
                    </div>
                  </label>
                  <input
                    id="checkbox_47"
                    type="checkbox"
                    value="2"
                  />
                </div>
              </div>
              <div
                class="c18"
              >
                <div
                  class="c19 c20"
                >
                  <label
                    class="c21 c22"
                    for="checkbox_48"
                  >
                    <div
                      class="c23 c24"
                    >
                      <svg />
                    </div>
                    <div
                      class="c25"
                      data-testid="checkbox-label"
                    >
                      Headache
                    </div>
                  </label>
                  <input
                    id="checkbox_48"
                    type="checkbox"
                    value="3"
                  />
                </div>
              </div>
              <div
                class="c18"
              >
                <div
                  class="c19 c20"
                >
                  <label
                    class="c21 c22"
                    for="checkbox_49"
                  >
                    <div
                      class="c23 c24"
                    >
                      <svg />
                    </div>
                    <div
                      class="c25"
                      data-testid="checkbox-label"
                    >
                      Cough
                    </div>
                  </label>
                  <input
                    id="checkbox_49"
                    type="checkbox"
                    value="4"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c26"
      >
        <button
          class="c27"
          data-testid="survey-preview-prev"
          width="75"
        >
          Previous
        </button>
        <button
          class="c28"
          data-testid="survey-preview-next"
          disabled=""
          width="41"
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Preview should lifecycle 4`] = `
.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c22 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c25 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c24 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c26 {
  display: inline-block;
}

.c26 input {
  display: none;
}

.c26 .c23 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  stroke: #B3C6F1;
}

.c26 .c23 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c26:hover > .c21 {
  cursor: pointer;
}

.c26:hover .c23 svg > :first-child {
  fill: #ECF1FC;
}

.c19 {
  display: inline-block;
}

.c19 input {
  display: none;
}

.c19 .c23 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #4475E3;
}

.c19 .c23 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c19:hover > .c21 {
  cursor: pointer;
}

.c20 label {
  gap: 0.75rem;
  grid-template-columns: 1.5rem 1fr;
  grid-template-rows: 3.5rem;
}

.c20 label div:first-child {
  width: 1.5rem;
  height: 3.5rem;
}

.c20 label div:last-child {
  margin-top: 0;
  height: 3.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 16.875rem;
  box-shadow: 0 0.125rem 0.25rem rgba(71,71,71,0.25);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 37.5rem;
  max-height: 37.5rem;
  margin: 0 2.5rem 1.5rem;
  background-color: #fbfbfb;
}

.c1 {
  min-width: 22.5rem;
  height: 50rem;
  -webkit-transform: scale(0.75) translateY(-17%) translateX(-17%);
  -ms-transform: scale(0.75) translateY(-17%) translateX(-17%);
  transform: scale(0.75) translateY(-17%) translateX(-17%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  height: 2rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1.75rem;
  padding-left: 1.4375rem;
  background-color: #fbfbfb;
}

.c3 svg {
  margin-right: 0.5rem;
}

.c5 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.625rem;
  font-weight: 400;
  font-style: normal;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 17.25rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  gap: 2rem;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  color: #474747;
  width: 100%;
}

.c16 {
  margin: 0.25rem 0 1rem;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #808080;
  width: 100%;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c13 textarea {
  height: 7.125rem;
}

.c28 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 4.6875rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c28:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c29 {
  font-family: Inter,sans-serif;
  font-size: 1.125rem;
  line-height: 1.4375rem;
  font-weight: 600;
  font-style: normal;
  width: 2.5625rem;
  border: none;
  background-color: transparent;
  color: #4475E3;
  cursor: pointer;
  padding: 0;
}

.c29:disabled {
  color: #474747;
  font-weight: 400;
  cursor: default;
}

.c7 {
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  width: 100%;
  border-radius: 0.75rem;
  background-color: #ECF1FC;
  height: 0.75rem;
  position: relative;
}

.c9 {
  width: calc(100% * 0.25);
  position: relative;
  height: 0.75rem;
  border-radius: 0.75rem;
  background-color: #4475E3;
  -webkit-transition: width 300ms cubic-bezier(0.45,0.05,0,1);
  transition: width 300ms cubic-bezier(0.45,0.05,0,1);
}

.c10 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  line-height: 1.125rem;
  color: #474747;
  margin-top: 0.5rem;
  margin-bottom: 0.375rem;
}

.c11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  height: 3.5rem;
}

.c6 {
  margin: 0.75rem 1.5rem 0;
}

<div
  class="c0"
  data-testid="preview"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    />
    <div
      class="c3"
    >
      <svg />
      <div
        class="c4"
      >
        0 Survey placeholder for title maximum two lines
      </div>
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <div
              class="c9"
            />
          </div>
          <div
            class="c10"
          >
            1 out of 4
          </div>
        </div>
      </div>
      <div
        class="c11"
      >
        <div
          class="c12"
          data-testid="survey-preview-questions"
        >
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div
                class="c15"
              >
                Did you experience nausea today?*
              </div>
              <div
                class="c16"
              />
            </div>
            <div
              class="c17"
            >
              <div
                class="c18"
              >
                <div
                  class="c19  c20"
                  kind="mobile"
                >
                  <label
                    class="c21 c22"
                    for="50"
                    kind="mobile"
                  >
                    <div
                      class="c23 c24"
                    >
                      <svg />
                    </div>
                    <div
                      class="c25"
                    >
                      Yes
                    </div>
                  </label>
                  <input
                    checked=""
                    id="50"
                    type="checkbox"
                    value="0"
                  />
                </div>
              </div>
              <div
                class="c18"
              >
                <div
                  class="c26  c20"
                  kind="mobile"
                >
                  <label
                    class="c21 c22"
                    for="51"
                    kind="mobile"
                  >
                    <div
                      class="c23 c24"
                    >
                      <svg />
                    </div>
                    <div
                      class="c25"
                    >
                      No
                    </div>
                  </label>
                  <input
                    id="51"
                    type="checkbox"
                    value="1"
                  />
                </div>
              </div>
              <div
                class="c18"
              >
                <div
                  class="c26  c20"
                  kind="mobile"
                >
                  <label
                    class="c21 c22"
                    for="52"
                    kind="mobile"
                  >
                    <div
                      class="c23 c24"
                    >
                      <svg />
                    </div>
                    <div
                      class="c25"
                    >
                      I dont remember
                    </div>
                  </label>
                  <input
                    id="52"
                    type="checkbox"
                    value="2"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c27"
      >
        <button
          class="c28"
          data-testid="survey-preview-prev"
          disabled=""
          width="75"
        >
          Previous
        </button>
        <button
          class="c29"
          data-testid="survey-preview-next"
          width="41"
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;
